--- a/Diff.html
+++ b/Diff.html
@@ -31,8 +31,10 @@ Mr. Jaishankar also met Speaker of the House of Representatives Paul Ryan and di
 				  </table>
 </div>
 <div id="output">
-			<svg id="accuracy" width="50%" height="250" style="float:left"></svg>
-			<svg id="error" width="50%" height="250" style="float:left"></svg>
+			<svg id="accuracy" width="25%" height="250" style="float:left"></svg>
+			<svg id="error" width="25%" height="250" style="float:left"></svg>
+			<svg id="depressions" width="25%" height="250" style="float:left"></svg>
+			<svg id="speed" width="25%" height="250" style="float:left"></svg>
 			<table>
 			<tbody><tr style="width:100%">
 							<td style="width:100%"><pre id="result" style="width:100%;white-space:pre-wrap;white-space:-moz-pre-wrap;white-space:-o-pre-wrap;white-space:-pre-wrap;word-wrap: break-word;"><del></del><ins></ins></pre></td>
@@ -46,33 +48,6 @@ Mr. Jaishankar also met Speaker of the House of Representatives Paul Ryan and di
 				     e.preventDefault();
 				 })
 
-				var clock;
-
-				$(document).ready(function() {
-
-					clock = $('.clock').FlipClock(900, {
-								clockFace: 'MinuteCounter',
-								countdown: true,
-								autoStart: false,
-								callbacks: {
-									start: function() {
-										//$('.message').html('The clock has started!');
-										document.getElementById("submitTest").disabled = false;
-									},
-									stop: function(){
-										document.getElementById("submitTest").disabled = true;
-										alert("Time Over");
-									}
-								}
-						});
-				});
-
-				var startTest = function(){
-						clock.start();
-				};
-				var endTest = function(){
-					  clock.stop();
-				};
 				var accuracyGaugeConfig = liquidFillGaugeDefaultSettings();
 						accuracyGaugeConfig.circleColor = "#2E7D32";
 						accuracyGaugeConfig.textColor = "#1B5E20";
@@ -93,9 +68,64 @@ Mr. Jaishankar also met Speaker of the House of Representatives Paul Ryan and di
 						errorGaugeConfig.waveHeight = 0.15;
 				var errorGauge = loadLiquidFillGauge("error", 0, errorGaugeConfig);
 
+				var depressionsGaugeConfig = liquidFillGaugeDefaultSettings();
+						depressionsGaugeConfig.circleColor = "##0277BD";
+						depressionsGaugeConfig.textColor = "#0277BD";
+						depressionsGaugeConfig.waveTextColor = "#40C4FF";
+						depressionsGaugeConfig.waveColor = "#0277BD";
+						depressionsGaugeConfig.waveAnimateTime = 2000;
+						depressionsGaugeConfig.waveCount = 1;
+						depressionsGaugeConfig.waveHeight = 0.15;
+						depressionsGaugeConfig.displayPercent = false;
+				var depressionsGauge = loadLiquidFillGauge("depressions", 0, depressionsGaugeConfig);
+
+				var speedGaugeConfig = liquidFillGaugeDefaultSettings();
+						speedGaugeConfig.circleColor = "#00695C";
+						speedGaugeConfig.textColor = "#00695C";
+						speedGaugeConfig.waveTextColor = "#64FFDA";
+						speedGaugeConfig.waveColor = "#00695C";
+						speedGaugeConfig.waveAnimateTime = 2000;
+						speedGaugeConfig.waveCount = 1;
+						speedGaugeConfig.waveHeight = 0.15;
+						speedGaugeConfig.displayPercent = false;
+				var speedGauge = loadLiquidFillGauge("speed", 0, speedGaugeConfig);
+
 				var a = document.getElementById('a');
 				var b = document.getElementById('b');
 				var result = document.getElementById('result');
+
+				var clock;
+
+				$(document).ready(function() {
+
+					clock = $('.clock').FlipClock(900, {
+								clockFace: 'MinuteCounter',
+								countdown: true,
+								autoStart: false,
+								callbacks: {
+									start: function() {
+										//$('.message').html('The clock has started!');
+										document.getElementById("submitTest").disabled = false;
+									},
+									stop: function(){
+										document.getElementById("submitTest").disabled = true;
+										console.log("Elapsed Time "+(900-clock.getTime().time)+" seconds");
+										console.log("Depressions : "+b.textContent.length);
+										depressionsGauge.update(b.textContent.length);
+										speedGauge.update(Math.ceil((b.textContent.length/(900-clock.getTime().time))*900));
+									}
+								}
+						});
+				});
+
+				var startTest = function(){
+						clock.start();
+				};
+				var endTest = function(){
+					  clock.stop();
+				};
+
+
 
 
 				function changed() {
