--- a/diff.html
+++ b/diff.html
@@ -25,10 +25,12 @@
 				.passage:hover
 				{
 					cursor: pointer;
-					color: #00BFA5;
+					color: #FFF;
+					background-color: #00BFA5;
 				}
 				.passage{
 					font-family: 'Nunito', sans-serif;
+					color: #00BFA5;
 					border:1px solid;
 					border-radius: 7px;
 					padding: 5px;
@@ -43,34 +45,110 @@
 					cursor: pointer;
 					color: #FFF;
 					background-color: #00BFA5;
+					text-decoration: none;
 				}
 				.practiceButton{
 					font-family: 'Nunito', sans-serif;
+					color: #00BFA5;
 					border:1px solid;
 					font-size: 25px;
 					border-color: #00BFA5;
 					background-color: Transparent;
 					padding: 5px;
+					text-decoration: none;
+				}
+				.submitTestButton:hover {
+					cursor: pointer;
+					color: #FFF;
+					background-color: #00BFA5;
+				}
+				.submitTestButton {
+					font-family: 'Nunito', sans-serif;
+					color: #00BFA5;
+					border:1px solid;
+					font-size: 25px;
+					margin:30px;
+					border-color: #00BFA5;
+					background-color: Transparent;
+					padding: 5px;
+				}
+				.submitTestButton:disabled{
+					font-family: 'Nunito', sans-serif;
+					color: #F44336;
+					border:1px solid;
+					font-size: 25px;
+					border-color: #F44336;
+					background-color: Transparent;
+					padding: 5px;
+				}
+			  #user_email{
+					font-family: 'Nunito', sans-serif;
+					color: #FFF;
+					font-size: 25px;
+					padding: 15px;
+					display: inline-block;
+    			height: 100%;
+    			vertical-align: middle;
+				}
+				#quickstart-sign-in{
+					float: right;
+					font-family: 'Nunito', sans-serif;
+					color: #FFF;
+					border:1px solid;
+					margin:10px;
+					font-size: 25px;
+					border-color: #FFF;
+					padding: 5px;
+					background-color: Transparent;
+				}
+
+				#quickstart-sign-in:hover {
+					cursor: pointer;
+					color: #00BFA5;
+					background-color: #FFF;
+				}
+
+		    .loader {
+				  border: 16px solid #f3f3f3;
+				  border-radius: 50%;
+				  border-top: 16px solid #00BFA5;
+				  width: 100px;
+				  height: 100px;
+					margin: 0 auto;
+					margin-top: 200px;
+				  -webkit-animation: spin 2s linear infinite;
+				  animation: spin 2s linear infinite;
+				}
+
+				@-webkit-keyframes spin {
+				  0% { -webkit-transform: rotate(0deg); }
+				  100% { -webkit-transform: rotate(360deg); }
+				}
+
+				@keyframes spin {
+				  0% { transform: rotate(0deg); }
+				  100% { transform: rotate(360deg); }
 				}
     </style>
 </head>
-
 <body>
-
-	<div class="container">
+	<div class="container" style="background-color:#00BFA5;font-family: 'Nunito', sans-serif;width:100%; margin:autoStart">
 	    <div class="row">
+						<span id="user_id" style="display:none"></span>
 	          <span id="user_email"></span>
-	          <span id="user_id" style="display:none"></span>
 	          <button type="button" id="quickstart-sign-in">Sign In</button> <br>
 	    </div>
 	</div>
 <div id="navigation" style="width:100%">
-<div id="passages" style=""></div>
+						<div class="loader" id="loaderPassage"></div>
+						<div id="passages"></div>
 </div>
 <div id="instructions"></div>
 <div id="practice" style="width:100%" >
+					<div style="margin:20px">
 					<div class="clock" style="margin:2em; display:table;width:0;margin:0 auto"></div>
-					<button id="submitTest" onclick="endTest()" disabled="true">Finish</button>
+				</div>
+					<center><button class="submitTestButton" id="submitTest" onclick="endTest()" disabled="true">Finish</button></center>
 					<table>
 					<tbody><tr>
 							<td id="a">Foreign Secretary S. Jaishankar on Wednesday met U.S. National Security Advisor Lt. Gen. H.R. McMaster and discussed counter-terrorism and bilateral relations between the two countries.
@@ -82,10 +160,18 @@ Mr. Jaishankar also met Speaker of the House of Representatives Paul Ryan and di
 				  </table>
 </div>
 <div id="output">
+		<div style="margin-top:20px">
 			<svg id="accuracy" width="25%" height="250" style="float:left"></svg>
 			<svg id="error" width="25%" height="250" style="float:left"></svg>
 			<svg id="depressions" width="25%" height="250" style="float:left"></svg>
 			<svg id="speed" width="25%" height="250" style="float:left"></svg>
+		</div>
+		<div style="margin-top:10px;font-family: 'Nunito', sans-serif;font-size:30px">
+			<span style="float:left;width:25%;text-align:center">Accuracy</span>
+			<span style="float:left;width:25%;text-align:center">Error</span>
+			<span style="float:left;width:25%;text-align:center">Actual Depressions</span>
+			<span style="float:left;width:25%;text-align:center">Speed <br>(Calculated Depressions)</span>
+		</div>
 			<table>
 			<tbody><tr style="width:100%">
 							<td style="width:100%"><pre id="result" style="width:100%;white-space:pre-wrap;white-space:-moz-pre-wrap;white-space:-o-pre-wrap;white-space:-pre-wrap;word-wrap: break-word;"><del></del><ins></ins></pre></td>
@@ -93,7 +179,7 @@ Mr. Jaishankar also met Speaker of the House of Representatives Paul Ryan and di
 			</tbody>
 			</table>
 			<center>
-			<button class="practiceButton"onClick="showPassage()">Practice More</button>
+			<span class="practiceButton" onClick="showPassage()">Practice More</span>
 		</center>
 </div>
 
@@ -151,32 +237,44 @@ Mr. Jaishankar also met Speaker of the House of Representatives Paul Ryan and di
 				var clock;
 
 
-				var passageElem = document.getElementById('navigation');
+				var navigationElem = document.getElementById('navigation');
 				var instructionElem = document.getElementById('instructions');
 				var practiceElem = document.getElementById('practice');
 				var outputElem = document.getElementById('output');
+				var passageLoaderElem = document.getElementById('loaderPassage');
+				var passageElem = document.getElementById('passage');
 
         var showPassage = function() {
-        	  passageElem.style.display="block";
+        	  navigationElem.style.display="block";
 						instructionElem.style.display="none";
 						practiceElem.style.display="none";
 						outputElem.style.display="none";
         };
+				var passageLoaderShow = function(){
+						passageLoaderElem.style.display="block";
+						//passageElem.style.display="none";
+				};
+				var passageLoaderHide = function(){
+						passageLoaderElem.style.display="none";
+						//passageElem.style.display="block";
+				};
 				var showInstruction = function(){
-					passageElem.style.display="none";
+					navigationElem.style.display="none";
 					instructionElem.style.display="block";
 					practiceElem.style.display="none";
 					outputElem.style.display="none";
 
 				};
 				var showTest = function(){
-					passageElem.style.display="none";
+					b.textContent='';
+					resetTest();
+					navigationElem.style.display="none";
 					instructionElem.style.display="none";
 					practiceElem.style.display="block";
 					outputElem.style.display="none";
 				};
 				var showResult = function(){
-					passageElem.style.display="none";
+					navigationElem.style.display="none";
 					instructionElem.style.display="none";
 					practiceElem.style.display="none";
 					outputElem.style.display="block";
@@ -212,7 +310,9 @@ Mr. Jaishankar also met Speaker of the House of Representatives Paul Ryan and di
 					  clock.stop();
 				};
 
-
+				var resetTest = function(){
+					clock.setTime(900);
+				};
 
 
 				function changed() {
