--- a/user_registration.html
+++ b/user_registration.html
@@ -6,6 +6,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Nunito:700" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
@@ -15,27 +16,51 @@
 
 
 input[type=text], input[type=file] {
-    width: 50%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
+  width: 50%;
+  font-family: 'Nunito', sans-serif;
+  color: #00BFA5;
+  border:2px solid;
+  font-size: 25px;
+  border-color: #00BFA5;
+  border-radius: 4px;
+  background-color: Transparent;
+  padding: 10px;
 }
+
+button#quickstart-sign-in{
+  float: right;
+  font-family: 'Nunito', sans-serif;
+  color: #FFF;
+  border:1px solid;
+  margin:10px;
+  font-size: 25px;
+  border-color: #FFF;
+  padding: 5px;
+  background-color: Transparent;
+}
+#quickstart-sign-in:hover {
+  cursor: pointer;
+  color: #00BFA5;
+  background-color: #FFF;
+}
+
 
 button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 20%;
+  font-family: 'Nunito', sans-serif;
+  color: #00BFA5;
+  border:2px solid;
+  font-size: 25px;
+  margin:30px;
+  border-color: #00BFA5;
+  background-color: Transparent;
+  padding: 5px;
+  padding-left: 25px;
+  padding-right: 25px;
 }
-
-.imgcontainer {
-    text-align: center;
-    margin: 24px 0 12px 0;
+button:hover{
+  cursor: pointer;
+  color: #FFF;
+  background-color: #00BFA5;
 }
 
 img.avatar {
@@ -43,19 +68,28 @@ img.avatar {
     border-radius: 50%;
 }
 
-.container {
-    padding: 16px;
-}
 
 span.psw {
     float: right;
     padding-top: 16px;
 }
 
+#registration
+{
+  margin-top: 53px;
+}
+
+
 #registrationError
 {
   color: red;
   font-size: 20px;
+}
+
+body {
+    background: url("typing-in-nature.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 /* Change styles for span on extra small screens */
@@ -91,8 +125,7 @@ opacity */
     filter: alpha(opacity=0);
     opacity: 0;
 }
-input,
-[type=file] + label {
+input{
   border: 1px solid #CCC;
   border-radius: 3px;
   text-align: left;
@@ -102,27 +135,40 @@ input,
   margin: 0;
   left: 0;
   position: relative;
+
 }
 [type=file] + label {
+  font-family: 'Nunito', sans-serif;
+  color: #00BFA5;
+  border: 2px solid;
+  font-size: 25px;
+  margin: 30px;
+  border-color: #00BFA5;
+  border-radius: 3px;
+  background-color: Transparent;
+  padding: 20px;
   text-align: center;
-/*  left: 7.35em; */
-  top: 0.5em;
-   Decorative
-  background: #333;
-  color: #fff;
-/*  border: none; */
-  cursor: pointer;
+  width: 30%;
+  margin: 0;
+  left: 0;
+  position: relative;
+
+
 }
 [type=file] + label:hover {
-  background: #3399ff;
+  cursor: pointer;
+  color: #FFF;
+  background: #00BFA5;
 }
 
-#user_email
-{
-    color: white;
-    font-size: 15px;
-    padding: 2%;
-}
+#user_email{
+  color: #FFF;
+  font-size: 25px;
+  padding: 15px;
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;}
+
 
 #progress
 {
@@ -143,15 +189,16 @@ window.onload = function() {
 
 </head>
 
-<body style="background-color:black">
+<body  class="cover">
 
-<div class="container">
-    <div class="row">
-          <span id="user_email"></span>
-          <span id="user_id" style="display:none"></span>
-          <button type="button" id="quickstart-sign-in">Sign In</button> <br>
-    </div>
-</div>
+  <div class="container" style="background-color:#00BFA5;font-family: 'Nunito', sans-serif;width:100%; margin:autoStart">
+	    <div class="row">
+						<span id="user_id" style="display:none"></span>
+	          <span id="user_email"></span>
+	          <button type="button" id="quickstart-sign-in">Sign In</button> <br>
+	    </div>
+	</div>
+
 
 <div id="registration">
 
@@ -163,7 +210,7 @@ window.onload = function() {
 
         <div class="row"> <center> <input type="text" name="roll_no" id="roll_no"  placeholder="Enter your Roll No" required>  </center> </div> <br>  <br>
 
-        <div class="row"> <center> <input type="file" name="image" id="image"  placeholder="Upload your photo" required>  <label for="image">Upload your photo</label>  </center> </div> <br>  <br>
+        <div class="row"> <center> <input type="file" accept="image/jpg, image/jpeg, image/x-png" name="image" id="image"  placeholder="Upload your photo" required>  <label for="image">Upload your photo</label>  </center> </div>
 
         <div class="row"> <center>  <button type="button"  id="submitDetails">Submit</button> </center> </div>  <br><br>
 
@@ -176,6 +223,21 @@ window.onload = function() {
 
 
 
+<div class="container">
+  <div class="row">
+    <center>
+      <div class="progress" id="progress">
+          <div class="progress-bar progress-bar-striped active" id="bar" role="progressbar" aria-valuemin="0" aria-valuemax="100">
+          </div>
+      </div>
+    </center>
+  </div>
+</div>
+
+
+
+
+
   <script src="app.js"></script>
 
 
@@ -183,6 +245,7 @@ window.onload = function() {
 
 <script>
 
+document.getElementById('progress').style.display="none";
 
 var inputElement=document.getElementById("submitDetails");
 
