--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+.welcome_strip
+{
+	text-align: center;
+	font-family: 'Nunito', sans-serif;
+	color: #00BFA5;
+  font-size: 58px;
+	margin: 0 auto;
+}
+
 </style>
 
 </head>
@@ -92,7 +102,8 @@ body {
 <body class="cover">
 
 
-  <div class="container" style="padding-top:10%">
+  <div class="container" style="padding-top:5%">
+		  <center><span class="welcome_strip">Welcome to Pinnacle CPT / DEST Module</span></center><br><br>
       <div id="loginDiv">
       <div class="row"> <center>
                 <input type="email" id="email" placeholder="Enter Username" name="email" spellcheck="false" required> </center> </div> <br>
